# spectreScope

./: .gitattributes  .gitignore  CMakeLists.txt  NOTICE  README.md  build.sh  run.sh
cmake/: DefineToolchain.cmake  Toolchain-Linux-gcc-x86_64.cmake  Toolchain-SunOS-SunPro-amd64.cmake  Toolchain-SunOS-SunPro-sparcv9.cmake
src/: main.cpp
